# hyperx-pulsefire-battery

./: .gitignore  99-hyperx-pulsefire.rules  99-plasmangenuity.rules  CHANGELOG.md  LICENSE  PKGBUILD  README.md  hyperx-battery-tray.desktop  hyperx-pulsefire-battery.install  plasmangenuity-1.0.0.plasmoid  pyproject.toml
hyperx_battery/: __init__.py  cli.py  config.py  device.py  panel.py  protocol.py  tray.py
hyperx_battery/widgets/: __init__.py  buttons_section.py  dpi_section.py  info_section.py  led_section.py  macros_section.py  settings_section.py
plasmangenuity/: __init__.py  cli.py  config.py  device.py  panel.py  protocol.py  tray.py
plasmangenuity/core/: __init__.py  manager.py  provider.py  types.py
plasmangenuity/drivers/: __init__.py  base.py
plasmangenuity/drivers/hyperx/: __init__.py  driver.py
plasmangenuity/providers/: __init__.py  hid_driver.py  sysfs.py  upower.py
plasmangenuity/widgets/: __init__.py
plasmoid/contents/code/: backend.py
plasmoid/contents/ui/: main.qml
scripts/: hyperx-battery-notify.sh  waybar_module.sh
