[build-system]
requires = ["setuptools>=64,<70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperx-pulsefire-battery"
version = "2.0.0"
description = "Full NGenuity replacement for HyperX Pulsefire Dart wireless mouse on Linux"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["hyperx", "pulsefire", "dart", "battery", "mouse", "hid", "linux"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Hardware",
    "Topic :: Utilities",
]

dependencies = [
    "hidapi>=0.14.0",
]

[project.optional-dependencies]
tray = [
    "PyQt5>=5.15",
    "pyudev>=0.24",
]

[project.scripts]
hyperx-battery = "hyperx_battery.cli:main"
hyperx-battery-tray = "hyperx_battery.tray:main"

[project.urls]
Homepage = "https://github.com/radoslavchobanov/hyperx-pulsefire-battery"
Issues = "https://github.com/radoslavchobanov/hyperx-pulsefire-battery/issues"

[tool.setuptools.packages.find]
include = ["hyperx_battery*"]
